# ai-gov-uk-website

./: .editorconfig  .eleventy.js  .eleventyignore  .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  globals.d.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js
.github/: .github.env  PULL_REQUEST_TEMPLATE.md
.github/workflows/: _cicd.yml  build-and-release.yml
plausible-to-posthog/: README.md  plausible-to-posthog.py  pyproject.toml
public/: iai-design-system.css
public/css/: knowledge-hub.css  main.css  style.css  tailwind.css
public/js/: add-govuk-classes.js  filter-categories.js  filter-use-case-utils.js  iai-design-system.js  main.js  search-api.js
src/: 404.njk  about.njk  accessibility.njk  blog.njk  blogs.njk  evaluation.njk  hack.njk  index.njk  jobs.njk  join.njk  join_old.njk  opportunities.njk  partners.old  press-mentions.njk  project.njk  projects-old.njk  projects.njk  register-your-interest.njk  rss.njk  search.njk  site-map-json.njk  site-map.njk
src/_data/: _shared.js  blogs-new.js  blogs.js  evaluations.js  faqs.js  jobs.js  knowledgeHubCapability.js  knowledgeHubData.js  knowledgeHubGuidance.js  knowledgeHubPlanAndRunAnAIProjectGuidance.js  knowledgeHubPrompts.js  knowledgeHubUseCases.js  partners.js  press.js  projects-new.js  roles.js  (+2 more)
terraform/: .terraform.lock.hcl  acm.tf  cloudfront.tf  data.tf  iam.tf  provider.tf  random.tf  redirects.auto.tfvars.json  s3.tf  variables.tf  waf.tf
tests/: accessibility.spec.ts  animation.spec.ts  knowledge-hub.spec.ts
(+613 files in other folders)
